# poetry-docker

./: Dockerfile  build.sh  pip.txt  poetry.txt  pyproject.toml  tag.sh  update.sh
.devcontainer/: devcontainer.json
.github/workflows/: main.yml
