[tool.poetry]
name = "x-poetry"
version = "0.1.0"
description = ""
authors = ["Cyril Jouve <jv.cyril@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10,>=3.10.4"
poetry = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
