[project]
name = "x-poetry"
version = "0.1.0"
description = ""
authors = [
  {name = "Cyril Jouve", email = "jv.cyril@gmail.com"}
]
requires-python = "^3.13"
dependencies = [
  "poetry",
  "poetry-plugin-export",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
